// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders catalog 1`] = `
<div
  className="HeaderCatalog-root-35"
>
  <div
    className="HeaderCatalog-streamUserBlock-36"
  >
    <p
      className="HeaderCatalog-streamUserHello-37"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderCatalog-streamUserVerification-39"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderCatalog-streamUserPhoto-41"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderCatalog-streamUserBallance-38"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderCatalog-streamUserBallDescr-40"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
</div>
`;

exports[`renders game 1`] = `
<div
  className="HeaderGame-root-21"
>
  <div
    className="HeaderGame-gameUserBlock-22"
  >
    <p
      className="HeaderGame-gameUserHello-23"
    >
      Hello, Ben A 
      <br />
      <span
        className="HeaderGame-gameUserVerification-25"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderGame-gameUserPhoto-27"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderGame-gameUserBallance-24"
    >
      764.23 DCB 
      <br />
      <span
        className="HeaderGame-gameUserBallDescr-26"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
</div>
`;

exports[`renders games 1`] = `
<div
  className="HeaderGames-root-28"
>
  <div
    className="HeaderGames-gamesUserBlock-29"
  >
    <p
      className="HeaderGames-gamesUserHello-30"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderGames-gamesUserVerification-32"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderGames-gamesUserPhoto-34"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderGames-gamesUserBallance-31"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderGames-gamesUserBallDescr-33"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
  <div>
    Test
  </div>
</div>
`;

exports[`renders main 1`] = `
<header
  className="HeaderMain-root-1"
>
  <div
    className="UserBlock-root-2"
  >
    <div
      className="UserBlock-demoTitle-10"
    >
      DEMO VERSION
    </div>
    <div
      className="UserBlock-user-3"
    >
      <div
        className="UserBlock-userBlock-4"
      >
        <p
          className="UserBlock-userHello-5"
        >
           Hello, Ben A 
          <br />
          <span
            className="UserBlock-userVerification-6"
          >
            KYC VERIFICATED
          </span>
        </p>
        <div
          className="UserBlock-userPhoto-7"
        >
          <img
            alt=""
            src="user.png"
          />
        </div>
        <p
          className="UserBlock-userBallance-8"
        >
           dcb
          <br />
          <span
            className="UserBlock-userBallDescr-9"
          >
            YOUR BALANCE
          </span>
        </p>
      </div>
    </div>
  </div>
</header>
`;
